Fix jsonRequest body